# sorting-efficiency

./: .gitignore  CMakeLists.txt  INTERNALS.md  README.md  build.sh
.github/actions/build-windows/: action.yml
.github/workflows/: benchmark.yml  build-on-push.yml
__src/: benchmark.h  config.h  job.cpp  job.h  main.cpp
__src/utils/: experiment.h  utils.h
example/: generate.sh  linear-benchmark.sh
example/average/: advanced.gnu  comparison.gnu  default.gnu  generate_data.sh  generate_plots.sh
example/average/a1/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/average/a16/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/average/a2/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/average/a256/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/average/a4/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/average/a8/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/average/advanced/1/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/average/advanced/1024/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/average/advanced/16/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/average/advanced/2/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  (+1 more)
example/data/: generate.sh
example/data/linear/: generate.sh
example/data/quadratic/: generate.sh
example/plots/: common.gnu  generate.sh  md_insertion.gnu  quadratic.gnu  xs_sorted.gnu
example/sequential-runs/: comparison.gnu  generate_data.sh
example/sequential-runs/run10/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run11/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run12/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run13/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run14/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run15/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run16/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run3/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run5/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run6/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run7/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/sequential-runs/run9/: heap_inverted  heap_random  heap_sorted  insertion_inverted  insertion_random  insertion_sorted  merge_inverted  merge_random  merge_sorted  quick_inverted  quick_random  quick_sorted
example/steps/: generate.sh  small_step_types.gnu  step_types.gnu
plots/: common.gnu  md_insertion.gnu  plot1.gnu  plot2.gnu  xs_sorted.gnu
scratch/: diff_perm.cpp  plot1.gnu  plot2.gnu
src/: benchmark.cpp  benchmark.h  benchmark.hpp  config.cpp  config.h  experiment.cpp  experiment.h  main.cpp  sets.cpp  sets.h  sorters.h  sorters.hpp  utils.h
src/probands/: sets.cpp  sets.h  sorters.cpp  sorters.h  sorters.hpp
src/utils/: experiment.cpp  experiment.h  utils.h
tests/: CMakeLists.txt  main.cpp  sets.cpp  sorters.cpp  tests.cpp  utils.cpp
(+168 files in other folders)
